--- a/Extensions/JamesDibble.Extensions.System.Data/JamesDibble.Extensions.System.Data.csproj
+++ b/Extensions/JamesDibble.Extensions.System.Data/JamesDibble.Extensions.System.Data.csproj
@@ -31,6 +31,12 @@
     <DocumentationFile>..\..\Assemblies\JamesDibble.Extensions.System.Data.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,6 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\JamesDibble.pfx">
+      <Link>JamesDibble.pfx</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
