--- a/ApplicationFramework/Data/Persistence.StoredProcedureMapping/Persistence.StoredProcedureMapping.csproj
+++ b/ApplicationFramework/Data/Persistence.StoredProcedureMapping/Persistence.StoredProcedureMapping.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2DBAB1F-95CB-425A-A800-06F45001F759}</ProjectGuid>
+    <ProjectGuid>{94FD34CB-32EB-4724-9ACD-893D7781CD41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>System</RootNamespace>
-    <AssemblyName>JamesDibble.Extensions.System</AssemblyName>
+    <RootNamespace>JamesDibble.ApplicationFramework.Data.Persistence.StoredProcedureMapping</RootNamespace>
+    <AssemblyName>JamesDibble.ApplicationFramework.Data.Persistence.StoredProcedureMapping</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,48 +16,50 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Assemblies\Debug\</OutputPath>
+    <OutputPath>..\..\..\Assemblies\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Assemblies\</OutputPath>
+    <OutputPath>..\..\..\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\..\Assemblies\JamesDibble.ApplicationFramework.Data.Persistence.StoredProcedureMapping.XML</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>..\..\Assemblies\JamesDibble.Extensions.System.XML</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateTimeExtensions.cs" />
+    <Compile Include="IStoredProcedureMapper.cs" />
+    <Compile Include="IStoredProcedureMappingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="ObjectExtensions.cs" />
+    <Compile Include="StoredProcedureMappingContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\JamesDibble.pfx">
+    <None Include="..\..\..\JamesDibble.pfx">
       <Link>JamesDibble.pfx</Link>
     </None>
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Persistence\Persistence.csproj">
+      <Project>{4115485B-45E2-4BE7-9E6F-1B9661BF669A}</Project>
+      <Name>Persistence</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
