--- a/ApplicationFramework/Data/Persistence.StoredProcedureMapping/Persistence.StoredProcedureMapping.csproj
+++ b/ApplicationFramework/Data/Persistence.StoredProcedureMapping/Persistence.StoredProcedureMapping.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMapperDictionary.cs" />
     <Compile Include="IStoredProcedureMapper.cs" />
     <Compile Include="IStoredProcedureMappingContext.cs" />
+    <Compile Include="MapperDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoredProcedureMappingContext.cs" />
   </ItemGroup>
