--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.suo
 *.user
 *.sln.docstates
+.gitignore
+*.[Dd]ot[Ss]ettings
 
 # Build results
 
@@ -14,6 +16,8 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
+[Aa]ssemblies
+[Pp]ackages
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
