--- a/ApplicationFramework/Data/Persistence/Persistence.csproj
+++ b/ApplicationFramework/Data/Persistence/Persistence.csproj
@@ -54,6 +54,8 @@
     <Compile Include="IPersistenceManager.cs" />
     <Compile Include="IPersistenceSearcher.cs" />
     <Compile Include="IUniqueObject.cs" />
+    <Compile Include="PersistenceCollectionSearcher.cs" />
+    <Compile Include="PersistenceSearcher.cs" />
     <Compile Include="PropertyChangedBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueObject.cs" />
