--- a/ServiceBus/Configuration/Configuration.csproj
+++ b/ServiceBus/Configuration/Configuration.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1184A1D2-9269-49AB-B389-01578EA2C12E}</ProjectGuid>
+    <ProjectGuid>{A721808E-EE0A-460F-A12A-5E5387E15C46}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework</RootNamespace>
-    <AssemblyName>JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework</AssemblyName>
+    <RootNamespace>JamesDibble.ServiceBus.Configuration</RootNamespace>
+    <AssemblyName>JamesDibble.ServiceBus.Configuration</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Assemblies\Debug\</OutputPath>
+    <OutputPath>..\..\Assemblies\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,53 +25,36 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Assemblies\</OutputPath>
+    <OutputPath>..\..\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>..\Assemblies\JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework.XML</DocumentationFile>
+    <DocumentationFile>..\..\Assemblies\JamesDibble.ServiceBus.Configuration.XML</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\..\..\Dependencies\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityContext.cs" />
-    <Compile Include="IEntityContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\JamesDibble.pfx">
+    <None Include="..\..\JamesDibble.pfx">
       <Link>JamesDibble.pfx</Link>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Extensions\JamesDibble.Extensions.System.Data\JamesDibble.Extensions.System.Data.csproj">
-      <Project>{70100c35-0abc-486e-a04d-84055ebedeb5}</Project>
-      <Name>JamesDibble.Extensions.System.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Configuration\Configuration.csproj">
-      <Project>{02901128-926D-4282-900D-D921C2D8EDC9}</Project>
-      <Name>Configuration %28ApplicationFramework\Configuration%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Persistence\Persistence.csproj">
-      <Project>{4115485B-45E2-4BE7-9E6F-1B9661BF669A}</Project>
-      <Name>Persistence</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
