--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4115485B-45E2-4BE7-9E6F-1B9661BF669A}</ProjectGuid>
+    <ProjectGuid>{69BD6F98-3C1E-497D-B4EC-D0AABF292856}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JamesDibble.ApplicationFramework.Data.Persistence</RootNamespace>
-    <AssemblyName>JamesDibble.ApplicationFramework.Data.Persistence</AssemblyName>
+    <RootNamespace>JamesDibble.ServiceBus.Queueing.Msmq</RootNamespace>
+    <AssemblyName>JamesDibble.ServiceBus.Queueing.Msmq</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Assemblies\Debug\</OutputPath>
+    <OutputPath>..\..\..\Assemblies\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,13 +25,13 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Assemblies\</OutputPath>
+    <OutputPath>..\..\..\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\Assemblies\JamesDibble.ApplicationFramework.Data.Persistence.xml</DocumentationFile>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>..\..\..\Assemblies\JamesDibble.ServiceBus.Queueing.Msmq.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -40,28 +40,16 @@
     <AssemblyOriginatorKeyFile>..\..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Dependencies\Microsoft.Practices.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Interception, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Dependencies\Microsoft.Practices.Unity.Interception.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPersistedObject.cs" />
-    <Compile Include="IPersistenceCollectionSearcher.cs" />
-    <Compile Include="IPersistenceManager.cs" />
-    <Compile Include="IPersistenceSearcher.cs" />
-    <Compile Include="IUniqueObject.cs" />
-    <Compile Include="PersistenceCollectionSearcher.cs" />
-    <Compile Include="PersistenceSearcher.cs" />
-    <Compile Include="PropertyChangedBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UniqueObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\JamesDibble.pfx">
