Move queuing stuff.

--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,12 +50,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsmqQueueManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\JamesDibble.pfx">
       <Link>JamesDibble.pfx</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Queueing\Queueing.csproj">
+      <Project>{446A9C7B-1BC3-4796-B994-473B49A778B6}</Project>
+      <Name>Queueing %28ServiceBus\Queueing\Queueing%29</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
