--- a/ServiceBus/Queueing/Queueing/Queueing.csproj
+++ b/ServiceBus/Queueing/Queueing/Queueing.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="IMessage.cs" />
     <Compile Include="IQueue.cs" />
+    <Compile Include="QueueMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
