--- a/ApplicationFramework/Data/Persistence.EntityFramework/Persistence.EntityFramework.csproj
+++ b/ApplicationFramework/Data/Persistence.EntityFramework/Persistence.EntityFramework.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1184A1D2-9269-49AB-B389-01578EA2C12E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework</RootNamespace>
-    <AssemblyName>JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework</AssemblyName>
+    <RootNamespace>JamesDibble.ApplicationFramework.Data.Persistence.EntityFramework</RootNamespace>
+    <AssemblyName>JamesDibble.ApplicationFramework.Data.Persistence.EntityFramework</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -21,6 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>..\Assemblies\JamesDibble.ApplicaitonFramework.Data.Persistence.EntityFramework.XML</DocumentationFile>
+    <DocumentationFile>..\Assemblies\JamesDibble.ApplicationFramework.Data.Persistence.EntityFramework.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup>
@@ -42,6 +43,11 @@
   <ItemGroup>
     <Reference Include="EntityFramework">
       <HintPath>..\..\..\Dependencies\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Practices.Unity.Interception, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Dependencies\Microsoft.Practices.Unity.Interception.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
