--- a/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
+++ b/Extensions/JamesDibble.Extensions.System/JamesDibble.Extensions.System.csproj
@@ -39,7 +39,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
