--- a/Extensions/JamesDibble.Extensions.System.Data/JamesDibble.Extensions.System.Data.csproj
+++ b/Extensions/JamesDibble.Extensions.System.Data/JamesDibble.Extensions.System.Data.csproj
@@ -42,7 +42,10 @@
     <Reference Include="EntityFramework">
       <HintPath>..\..\Dependencies\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Dependencies\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
