Cleaning up a few things.  Adding MSMQ Installer

--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Messaging" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsmqInstaller.cs" />
     <Compile Include="MsmqQueueManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
