--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Messaging" />
+    <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MsmqInstaller.cs" />
