--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -57,6 +57,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Configuration\Configuration.csproj">
+      <Project>{A721808E-EE0A-460F-A12A-5E5387E15C46}</Project>
+      <Name>Configuration %28ServiceBus\Configuration%29</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Queueing\Queueing.csproj">
       <Project>{446A9C7B-1BC3-4796-B994-473B49A778B6}</Project>
       <Name>Queueing %28ServiceBus\Queueing\Queueing%29</Name>
