--- a/TestMsmqClient/TestMsmqClient.csproj
+++ b/TestMsmqClient/TestMsmqClient.csproj
@@ -4,57 +4,59 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A721808E-EE0A-460F-A12A-5E5387E15C46}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{3D1F310D-1C87-4F80-BCEA-668B1243C676}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JamesDibble.ServiceBus.Configuration</RootNamespace>
-    <AssemblyName>JamesDibble.ServiceBus.Configuration</AssemblyName>
+    <RootNamespace>TestMsmqClient</RootNamespace>
+    <AssemblyName>TestMsmqClient</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Assemblies\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Assemblies\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>..\..\Assemblies\JamesDibble.ServiceBus.Configuration.XML</DocumentationFile>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\..\JamesDibble.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IServiceBusConfiguration.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceBusConfigurationManager.cs" />
-    <Compile Include="ServiceBusConfigurationSection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\JamesDibble.pfx">
-      <Link>JamesDibble.pfx</Link>
-    </None>
+    <ProjectReference Include="..\ServiceBus\Configuration\Configuration.csproj">
+      <Project>{A721808E-EE0A-460F-A12A-5E5387E15C46}</Project>
+      <Name>Configuration %28ServiceBus\Configuration%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceBus\Queueing\Queueing.Msmq\Queueing.Msmq.csproj">
+      <Project>{69BD6F98-3C1E-497D-B4EC-D0AABF292856}</Project>
+      <Name>Queueing.Msmq</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceBus\Queueing\Queueing\Queueing.csproj">
+      <Project>{446A9C7B-1BC3-4796-B994-473B49A778B6}</Project>
+      <Name>Queueing %28ServiceBus\Queueing\Queueing%29</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
