--- a/Extensions/Mvc/Mvc.csproj
+++ b/Extensions/Mvc/Mvc.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\ApplicationFramework\Configuration\Configuration.csproj">
       <Project>{02901128-926d-4282-900d-d921c2d8edc9}</Project>
-      <Name>Configuration %28ApplicationFramework\Configuration%29</Name>
+      <Name>Configuration</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
