--- a/IntegrationTests/ServiceBus/Queueing/QueueingTests.Common/QueueingTests.Common.csproj
+++ b/IntegrationTests/ServiceBus/Queueing/QueueingTests.Common/QueueingTests.Common.csproj
@@ -42,6 +42,10 @@
       <Project>{446A9C7B-1BC3-4796-B994-473B49A778B6}</Project>
       <Name>Queueing %28ServiceBus\Queueing\Queueing%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\ServiceBus\ServiceBus.Common\ServiceBus.Common.csproj">
+      <Project>{a8ae9a0e-b0da-440a-8add-00e042f0f3af}</Project>
+      <Name>ServiceBus.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
