--- a/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
+++ b/ServiceBus/Queueing/Queueing.Msmq/Queueing.Msmq.csproj
@@ -57,6 +57,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ServiceBus.Common\ServiceBus.Common.csproj">
+      <Project>{a8ae9a0e-b0da-440a-8add-00e042f0f3af}</Project>
+      <Name>ServiceBus.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ServiceBus.Configuration\ServiceBus.Configuration.csproj">
+      <Project>{a721808e-ee0a-460f-a12a-5e5387e15c46}</Project>
+      <Name>ServiceBus.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Queueing\Queueing.csproj">
       <Project>{446A9C7B-1BC3-4796-B994-473B49A778B6}</Project>
       <Name>Queueing %28ServiceBus\Queueing\Queueing%29</Name>
