Changing my mind about persistence manages having the ability to create objects.  Feels like a slight anit-pattern...  Thats what the add method is for.  Finally got round to adding interfaces for bootstrapping and normalising IOC container access.

--- a/ApplicationFramework/Data/Persistence.EntityFramework/Persistence.EntityFramework.csproj
+++ b/ApplicationFramework/Data/Persistence.EntityFramework/Persistence.EntityFramework.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityContext.cs" />
+    <Compile Include="EntityFrameworkPersistenceManager.cs" />
     <Compile Include="IEntityContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
