--- a/UnitTesting/ApplicationFramework/Data/PersistenceTests/PersistenceTests.csproj
+++ b/UnitTesting/ApplicationFramework/Data/PersistenceTests/PersistenceTests.csproj
@@ -55,6 +55,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeMapping\TypeMappingDictionaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\ApplicationFramework\Data\Persistence\Persistence.csproj">
