Testing typemapping configuration.

--- a/ApplicationFramework/Data/Persistence/Persistence.csproj
+++ b/ApplicationFramework/Data/Persistence/Persistence.csproj
@@ -75,6 +75,12 @@
       <Link>JamesDibble.pfx</Link>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Configuration\Configuration.csproj">
+      <Project>{02901128-926D-4282-900D-D921C2D8EDC9}</Project>
+      <Name>Configuration</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
